--- a/public/convert_rule.html
+++ b/public/convert_rule.html
@@ -4,6 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convert Rule to AST</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        label {
+            font-weight: bold;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        pre {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
     <h1>Convert Rule to AST</h1>
@@ -11,8 +56,8 @@
         <div class="form-group">
             <label for="ruleInput">Rule String:</label>
             <input type="text" id="ruleInput" placeholder="Enter rule (e.g., age > 30 AND salary > 50000)" />
-            <button onclick="convertRuleToNode()">Convert Rule to AST</button>
         </div>
+        <button onclick="convertRuleToNode()">Convert Rule to AST</button>
         <div class="result" id="resultContent"></div>
     </div>
 
