--- a/public/evaluate_ast.html
+++ b/public/evaluate_ast.html
@@ -4,6 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evaluate AST</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        label {
+            font-weight: bold;
+        }
+        textarea {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: none;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        pre {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
     <h1>Evaluate AST</h1>
@@ -24,8 +70,7 @@
         async function evaluateAST() {
             const ast = document.getElementById('astToEvaluate').value;
             const data = document.getElementById('dataToEvaluate').value;
-            console.log(ast)
-            console.log(data)
+
             if (!ast || !data) {
                 document.getElementById('resultContent').innerHTML = 'Please enter both AST and data to evaluate!';
                 return;
@@ -39,7 +84,6 @@
                 });
                 
                 const res = await response.json();
-                console.log(res)
                 if (res.error) {
                     document.getElementById('resultContent').innerHTML = `Error: ${res.error}`;
                 } else {
