--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,33 @@
         }
         h1 {
             text-align: center;
+            color: #333;
         }
         .container {
             max-width: 800px;
             margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
         .nav-links {
             display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
+            justify-content: space-around;
+            flex-wrap: wrap;
         }
         a {
             text-decoration: none;
             color: #007bff;
             font-weight: bold;
+            padding: 10px;
+            border: 1px solid #007bff;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
+        a:hover {
+            background-color: #007bff;
+            color: #fff;
         }
     </style>
 </head>
