--- a/public/save_ast.html
+++ b/public/save_ast.html
@@ -4,15 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save AST</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        label {
+            font-weight: bold;
+        }
+        textarea {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: none;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        pre {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
     <h1>Save AST</h1>
     <div class="container">
         <div class="form-group">
-            <label for="astToSave">Rule to Save in DB</label>
-            <textarea id="astToSave" rows="5" placeholder="Enter The Rule"></textarea>
-            <button onclick="saveAST()">Save AST</button>
+            <label for="astToSave">Save Rule to DB:</label>
+            <textarea id="astToSave" rows="5" placeholder="Enter Rule to Save"></textarea>
         </div>
+        <button onclick="saveAST()">Save AST</button>
         <div class="result" id="resultContent"></div>
     </div>
 
@@ -21,23 +67,23 @@
             const ast = document.getElementById('astToSave').value;
 
             if (!ast) {
-                document.getElementById('resultContent').innerHTML = 'Please enter an AST!';
+                document.getElementById('resultContent').innerHTML = 'Please enter an AST to save!';
                 return;
             }
 
             try {
-                const response = await fetch('/api/save-ast', {
+                const response = await fetch('/api/save_ast', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ ast })
                 });
                 
-                const data = await response.json();
-                console.log(data)
-                if (data.error) {
-                    document.getElementById('resultContent').innerHTML = `Error: ${data.error}`;
+                const res = await response.json();
+                // console.log(res)
+                if (res.error) {
+                    document.getElementById('resultContent').innerHTML = `Error: ${res.error}`;
                 } else {
-                    document.getElementById('resultContent').innerHTML = ` ${data.message} , Node Id : ${data.nodeId}`;
+                    document.getElementById('resultContent').innerHTML = `AST saved with ID: ${res.nodeId}`;
                 }
             } catch (error) {
                 document.getElementById('resultContent').innerHTML = 'Error saving AST. Please try again.';
